# batbot

./: .gitignore  README.md
batbot7_bringup/c_lib/include/: serial_object_uart_win.hpp
batbot7_bringup/c_lib/src/: CMakeLists.txt  serial_object_uart_win.cpp
batbot7_bringup/src/batbot7_bringup/serial/: bb_serial_test.py
batbot_bringup/: CMakeLists.txt  README.md  requirements.txt  setup.py  tendon_calibration.py
batbot_bringup/c_lib/: CMakeLists.txt  main.cpp
batbot_bringup/c_lib/include/: serial_object_uart_linux.hpp  serial_object_uart_win.hpp
batbot_bringup/c_lib/src/: CMakeLists.txt  serial_object_uart_linux.cpp  serial_object_uart_win.cpp  tendon_hardware_interface.cpp
batbot_bringup/src/batbot_bringup/: TendonController.py  TendonHardware.cpp  TendonHardware.py  tendon_calibration.py
batbot_bringup/src/batbot_bringup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
batbot_bringup/src/batbot_bringup/bb_serial/: bb_serial.py
batbot_bringup/src/batbot_bringup/bb_tendons/: TendonController.py  TendonHardware.py
batbot_bringup/src/batbot_bringup/serial/: bb_serial.py
batbot_tendon_controller/: README.md  platformio.ini
batbot_tendon_controller/lib/comms/: ml_tendon_comm_protocol.cpp  ml_tendon_comm_protocol.hpp  ml_tendon_commands.cpp  ml_tendon_commands.hpp
batbot_tendon_controller/lib/tendon/: TendonMotor.cpp  TendonMotor.h
batbot_tendon_controller/lib/utils/: ml_pid.hpp
batbot_tendon_controller/src/: main.cpp
batbot_tendon_controller/test/test_comms/: test_comms.cpp  unity_config.h
batbot_tendon_controller/test/test_pid/: test_pid.cpp
(+2 files in other folders)
